--- a/Bronze1.html
+++ b/Bronze1.html
@@ -16,17 +16,16 @@
 
 <div id="assyria" class="sidetipMap"><h2>ASSÍRIA</h2></div>
 <div id="sumer" class="sidetipMap"><h2>SUMÉRIA</h2></div>
-<div id="kura" class="sidetipMap"><h2>CULTURA DE KURA-ARAXES</h2></div>
-
-<div id="ebla" class="sidetipMap"><h2>REINO DE EBLA</h2></div>
 <div id="nagar" class="sidetipMap"><h2>REINO DE NAGAR</h2></div>
 <div id="mari" class="sidetipMap"><h2>REINO DE MARI</h2></div>
 <div id="hurrians" class="sidetipMap"><h2>HURRITAS</h2></div>
+
+<div id="ebla" class="sidetipMap"><h2>REINO DE EBLA</h2></div>
 <div id="canaan" class="sidetipMap"><h2>CANAÃ</h2></div>
 <div id="philia" class="sidetipMap"><h2>CULTURA FÍLIA</h2></div>
 
-
 <div id="elam" class="sidetipMap"><h2>ELAM</h2></div>
+<div id="kura" class="sidetipMap"><h2>CULTURA DE KURA-ARAXES</h2></div>
 <div id="yamnaya" class="sidetipMap"><h2>CULTURA YAMNA</h2></div>
 <div id="sintashta" class="sidetipMap"><h2>CULTURA DE SINTASHTA</h2></div>
 <div id="bmac" class="sidetipMap"><h2>CIVILIZAÇÃO DO OXO</h2><p>Complexo Arqueológico<br>Báctria–Margiana</p></div>
@@ -55,42 +54,62 @@
 	   </g>
 	   
 		<!-- CIVILIZAÇÕES -->
-	<g>		
+	<g>	
 			<path class="civ2 civEgypt2" id="kerma" onmouseover="showTipMap('kerma')" onmouseout="hideTipMap('kerma')"
 			d="m 555.00002,630 h -9.99998 v 4.99999 l -25,25.00001 v 19.99998 l 4.99999,20.00001 10.00001,10e-6 15,-15 4.99998,4.99999 2e-5,15.00001 -10,10 v 10 h 9.99998 v -10.00001 l 10.00001,-10.00001 V 689.99999 L 560.00004,675 h -10 l -15,15 -5.00002,-10.00002 v -15 L 555.00004,640 Z"/>
+			
 			<path class="civ civEgypt" id="egypt" onmouseover="showTipMap('egypt')" onmouseout="hideTipMap('egypt')"
 			d="m 540.00011,544.99981 -15.35358,0.35347 -9.64644,4.64674 L 525,565.00014 v 25.00002 l 19.99981,19.99982 -4.9997,5.00021 4.9997,4.99969 v 9.99991 h 10.00042 v -9.99991 l -5.00021,-4.99969 5.00021,-5.00021 v -5.00022 l -5.00021,-4.99969 h -5.00021 l -9.99991,-9.99991 v -15.00012 l 5.00021,-5.00021 v -4.99969 l 4.9997,-5.00021 9.00023,15.00007 1,-15 4.99994,-10 -15.00017,2e-5 z"/>
 
+			<!-- Mesopotamia -->
+
 			<path class="civ civMeso" id="assyria" onmouseover="showTipMap('assyria')" onmouseout="hideTipMap('assyria')"
 			d="m 660.00005,500 h -5 l -10,-20 v -5 h 9.99998 l 10.00002,5 5,5 z"/>
+			
 			<path class="civ civMeso" id="sumer" onmouseover="showTipMap('sumer')" onmouseout="hideTipMap('sumer')"
 			d="M 685.00005,534.99998 H 670.00003 V 540 l 5.00002,10 15,10 h 10 l -10e-6,-14.99997 -5.00002,-10.00001 z"/>
-			<path class="civ2 civMeso2" id="kura" onmouseover="showTipMap('kura')" onmouseout="hideTipMap('kura')"
-			d="M 699.99997,390.00015 690.00005,405 l -25,-5 4.99998,14.99998 -4.99999,10.00001 -9.99969,15.00016 -30.00031,4.99985 -15,5 -10,-5 -15,5 -15,10 20,10 -5,9.99999 L 595.00005,475 h 14.99999 l 4.99999,10 5.00001,-5 5,-10.00002 L 645.00005,475 h 9.99998 l 10.00002,5 5,5 9.99956,4.6e-4 L 705.00004,515 h 10 l 10.00001,-20.00002 -5.00002,-4.99999 -25.00042,-9.99953 -4.99957,-10.00048 4.99999,-15 20.00001,-14.99999 h 20.00002 L 725.00005,435 705.00004,410 v -15 z"/>
-
+			
+			<path class="civ civMeso" id="nagar" onmouseover="showTipMap('nagar')" onmouseout="hideTipMap('nagar')"
+			d="M 640.00003,479.99999 V 485 h -4.99999 v 9.99998 L 626.8259,504.10112 622.7,498.7 l 7.30003,-3.70002 v -4.99999 L 625,488.3 l -9.99996,-3.3 5.00001,-5.00001 z"/>
+			
+			<path class="civ civMeso" id="mari" onmouseover="showTipMap('mari')" onmouseout="hideTipMap('mari')"
+			d="M 635.00004,494.99998 V 500 l 9.99998,4.99999 v 4.99999 L 635.00004,515 626.8259,504.10112 Z"/>
+			
+			<path class="civ2 civMeso2" id="hurrians" onmouseover="showTipMap('hurrians')" onmouseout="hideTipMap('hurrians')"
+			d="M 620.00005,479.99999 625.00004,469.99998 645.00002,475 v 4.99999 z"/>
+			
+			<!-- Levant -->
+			
 			<path class="civ civLevant" id="ebla" onmouseover="showTipMap('ebla')" onmouseout="hideTipMap('ebla')"
 			d="m 580.00002,525 5.00002,-15.00002 v -15 L 580.00002,489.99999 585.00004,485 v -5.00001 L 595.00005,475 h 14.99999 l 4.99999,10 15,4.99999 v 4.99999 L 620.00005,500 h -5.00002 l -4.99999,9.99998 L 590.00003,525 Z"/>
-			<path class="civ civLevant" id="nagar" onmouseover="showTipMap('nagar')" onmouseout="hideTipMap('nagar')"
-			d="M 640.00003,479.99999 V 485 h -4.99999 v 9.99998 L 626.8259,504.10112 622.7,498.7 l 7.30003,-3.70002 v -4.99999 L 625,488.3 l -9.99996,-3.3 5.00001,-5.00001 z"/>
-			<path class="civ civLevant" id="mari" onmouseover="showTipMap('mari')" onmouseout="hideTipMap('mari')"
-			d="M 635.00004,494.99998 V 500 l 9.99998,4.99999 v 4.99999 L 635.00004,515 626.8259,504.10112 Z"/>
+			
 			<path class="civ2 civLevant2" id="canaan" onmouseover="showTipMap('canaan')" onmouseout="hideTipMap('canaan')"
 			d="m 580.00002,489.99999 5.00002,4.99999 v 15 L 580.00002,525 l -4.99998,25 -5,15 -10,-15.00002 4.99999,-4.99999 14.99999,-35.00001 z"/>
+			
 			<path class="civ2 civLevant2" id="philia" onmouseover="showTipMap('philia')" onmouseout="hideTipMap('philia')"
 			d="M 544.99999,504.99999 549.99998,500 h 10 l 9.99998,-5.00002 L 564.99997,500 v 4.99999 h -4.99999 l -9.99995,4.99999 z"/>
-			<path class="civ2 civLevant2" id="hurrians" onmouseover="showTipMap('hurrians')" onmouseout="hideTipMap('hurrians')"
-			d="M 620.00005,479.99999 625.00004,469.99998 645.00002,475 v 4.99999 z"/>
+
+			<!-- Iran -->
 
 			<path class="civ civIran" id="elam" onmouseover="showTipMap('elam')" onmouseout="hideTipMap('elam')"
 			d="M 730.00004,559.99998 715.00005,550 l -15,-2e-5 v -4.99999 l -5.00002,-10.00001 10.49996,-20.29365 9.50005,0.29367 39.99957,35.00046 5.00042,14.99954 -14.99999,19.99999 z"/>
+			
+			<path class="civ2 civIran2" id="kura" onmouseover="showTipMap('kura')" onmouseout="hideTipMap('kura')"
+			d="M 699.99997,390.00015 690.00005,405 l -25,-5 4.99998,14.99998 -4.99999,10.00001 -9.99969,15.00016 -30.00031,4.99985 -15,5 -10,-5 -15,5 -15,10 20,10 -5,9.99999 L 595.00005,475 h 14.99999 l 4.99999,10 5.00001,-5 5,-10.00002 L 645.00005,475 h 9.99998 l 10.00002,5 5,5 9.99956,4.6e-4 L 705.00004,515 h 10 l 10.00001,-20.00002 -5.00002,-4.99999 -25.00042,-9.99953 -4.99957,-10.00048 4.99999,-15 20.00001,-14.99999 h 20.00002 L 725.00005,435 705.00004,410 v -15 z"/>
+			
 			<path class="civ2 civIran2" id="sintashta" onmouseover="showTipMap('sintashta')" onmouseout="hideTipMap('sintashta')"
 			d="m 745.00005,295 -5,10 5,15 v 30 l -5.00012,5.00017 20.00001,-1.5e-4 4.99999,10.00001 65.00009,-35.00001 L 850.00006,310 v -35 l -15,-15 h -65.00001 z"/>
+			
 			<path class="civ2 civIran2" id="yamnaya" onmouseover="showTipMap('yamnaya')" onmouseout="hideTipMap('yamnaya')"
 			d="m 535.00003,359.99999 -4.99999,10e-6 -15,25 h -5.00006 l -4.99994,14.99999 -30.00001,5.00001 -25,-5 L 440,395.00002 l 5,-5 4e-5,-10.00004 h 35.00001 L 490.00003,375 V 360 L 500,355.00002 l 10,-30 10,-10 L 615.00004,275 l 50.00001,-5 60,-5 20,30 -5,10 5,15 v 30 l -5,5 -10.00009,5.00014 h -4.99999 L 714.99996,370.00015 705,370 l -9.99995,15 4.99996,5.00002 -10,15 L 665.00004,400 l -20,-15 -20.00001,5 h -14.99999 l -15,-10 v -5 h 5 l 5,-10 -5.00006,-5.00001 15,-4.99999 h 4.99999 l -4.99999,-4.50001 -44.99994,14.50002 -6e-5,4.99999 5,5 h 15 v 5 h -9.99994 l -10,5 -5,5 h -5 l -5.00007,-10.00002 -9.99999,-5.00017 15,-4.99999 -19.77734,-4.55258 z"/>
+			
 			<path class="civ2 civIran2" id="indus" onmouseover="showTipMap('indus')" onmouseout="hideTipMap('indus')"
 			d="m 855.00005,620 v -15 h 29.99999 l 25.00001,-40 h 20.00001 l 10.00001,-25 39.99999,-15 25.00004,19.99999 5,10 L 1015,574.99998 960.00005,580 l -19.99998,5 -10,15 10,20 19.99998,4.99999 10.00001,14.99999 1e-5,10.00002 -3.60007,5 -1.39993,-10 h -5.00002 v 14.99999 l -14.99999,4.99999 -15,-14.99999 15,-10.00001 h -15 l -15,-9.99998 -15.00002,-15.00002 z"/>
+			
 			<path class="civ2 civIran2" id="bmac" onmouseover="showTipMap('bmac')" onmouseout="hideTipMap('bmac')"
 			d="m 855.00005,445 -25,4.99999 -15,10.00001 v 9.99998 l 15,5.00002 h 65 l 25,-5.00002 10.00001,-15 -15,-9.99998 z"/>
+
+			<!-- East -->
 
 			<path class="civ2 civGreece2" id="helladic" onmouseover="showTipMap('helladic')" onmouseout="hideTipMap('helladic')"
 			d="m 410,439.99999 3e-5,-9.99999 v -25 l 25,-5 20,35 10,10 h -15 l -5.00004,-10 -1e-5,10 25,25.00001 -10.00001,-5.00002 V 475 l -4.99999,-4.99999 h -4.99999 l -10,-5.00002 H 435 l -5.00002,5.00002 10.00001,19.99998 10,-4.99999 -5.00001,-10 h 10.00006 l -10.00006,-10.00001 h -14.99995 z"/>
@@ -110,7 +129,9 @@
 			d="m 360.00002,374.99999 5.00001,14.99999 44.99999,30.00002 10e-6,-15 24.99956,-4.99954 L 445.00003,390 v -10 l 10,-15 v -10 l 5,-15 -10,-10 h -15.00001 l -14.99999,5 h -10 l -10,-5 -5,-10 -10.00044,5.00046 -4.99956,9.99954 -5,20 -25.00002,15 v 4.99999 l 5.00002,10 z"/>
 			<path class="civ2 civGreece2" id="globular" onmouseover="showTipMap('globular')" onmouseout="hideTipMap('globular')"
 			d="m 310.00002,260 -5,5 15,25 10,10 15,9.99998 20.00001,5.00002 30,5 19.99956,-5 h 20.00043 l 10.00001,4.99999 29.99999,25 10.00001,4.99999 4.99999,10.00001 10.00001,-4.99999 10,-29.99999 19.99999,-20.00002 L 525.00003,290 l -24.99999,5 -25.00002,-5 -14.99999,-10.00001 -30,-44.99999 -15.00002,15 -9.99998,4.99999 -5.00001,-9.99999 -40,15 -15,-10 -20.00001,10 z"/>
-		 
+
+			<!-- West -->
+
 		<g class="civ2 civRome2" id="bellbeaker" onmouseover="showTipMap('bellbeaker')" onmouseout="hideTipMap('bellbeaker')">
 			<path d="M 99.999999,284.99998 V 290 L 110,294.99999 125,290 l 5,-5.00002 h 9.99999 l 5,-9.99998 1e-5,-10 -5,-5 9.99999,-5.00001 V 250 l -4.99998,-10 H 124.99999 L 115,250 h 9.99999 l -5,4.99999 H 105 V 260 h 5 L 99.999999,265 110,270 l 5,-10e-6 z"/>
 			<path d="M 370,464.99999 364.99998,475 370,479.99999 364.99998,485 354.99997,479.99999 339.99998,475 v -10.00001 h 10 L 354.99999,470 Z"/>
