--- a/gallery.html
+++ b/gallery.html
@@ -144,12 +144,12 @@ img.hover-shadow {
 		<p>Geral<br>Idade do Ferro<br>1.200 a.C. – 800 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Ancient1.png" onclick="showSidebar('meAA0')" class="hover-shadow">
+		<img src="img/maps/Ancient1.png" onclick="showSidebar('meAA1')" class="hover-shadow">
 		<h3>Mapa composto da Antiguidade Clássica</h3>
 		<p>Geral<br>Antiguidade Clássica<br>800 a.C. – 300 a.C.</p>
 	</div>
 	<div class="column">
-		<img src="img/maps/Ancient2.png" onclick="showSidebar('mAncient2')" class="hover-shadow">
+		<img src="img/maps/Ancient2.png" onclick="showSidebar('mAA2')" class="hover-shadow">
 		<h3>Mapa do Período Helenístico</h3>
 		<p>Geral<br>Período Helenístico<br>300 a.C. – 30 a.C.</p>
 	</div>
@@ -566,8 +566,8 @@ img.hover-shadow {
 			<iframe src="IronAge.html" height="100%" width="100%"></iframe>
 		</div>
 		
-		<div id="meAA0" class="mapaModal">
-			<span onclick="showSidebar('meAA0')" class="close">&times;</span>
+		<div id="meAA1" class="mapaModal">
+			<span onclick="showSidebar('meAA1')" class="close">&times;</span>
 			<iframe src="Ancient1.html" height="100%" width="100%"></iframe>
 		</div>
 
@@ -576,8 +576,8 @@ img.hover-shadow {
 			<iframe src="IranA2.html" height="100%" width="100%"></iframe>
 		</div>
 
-		<div id="mAncient2" class="mapaModal">
-			<span onclick="showSidebar('mAncient2')" class="close">&times;</span>
+		<div id="mAA2" class="mapaModal">
+			<span onclick="showSidebar('mAA2')" class="close">&times;</span>
 			<iframe src="Ancient2.html" height="100%" width="100%"></iframe>
 		</div>
 
