--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			
 			<!--Events-->
 			
-			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico</span>
+			<span class="event event0 eSA0" onmouseenter="showTipG('oSA0')" onmouseleave="hideTip()" onclick="showSidebarG('eSA0')">Revolução do Neolítico <i class="fa fa-map-o"></i></span>
 			<span class="event event0 eLevantS0 levant deny">Fundação da cidade de Jericó</span>
 			<span class="event event0 eLevantS1 levant deny">Fundação da cidade de Biblos</span>
 			<span class="event event0 eSA00 meso deny">Criação da Escrita Cuneiforme</span>
@@ -185,6 +185,9 @@
 			
 			<!--Events-->
 			
+			<span class="event event0 e3200bc egypt" onmouseenter="showTipG('o3200bc')" onmouseleave="hideTip()" onclick="showSidebarG('sbe3200bc')">Criação dos hieróglifos egípcios <i class="fa fa-sitemap"></i></span>
+			<span class="event event0 e1850bc" onclick="showSidebarG('e1850bc')">Desenvolvimento da escrita protossinaítica</span>
+			
 			<span class="event event0 e3150bc egypt" onmouseenter="showTipEgypt('oEgyptB1')" onmouseleave="hideTip()" onclick="showSidebarEgypt('sbEgyptB1')">Unificação do Alto e Baixo Egito</span>
 			<span class="event event0 e2600bc egypt deny" onmouseenter="showTipG('o2600bc')" onmouseleave="hideTip()">Construção da Grande Pirâmide de Gizé</span>
 			<span class="event event0 e1650bc egypt deny" onmouseenter="showTipG('o1650bc')" onmouseleave="hideTip()">Governo do Egito pelos Hicsos</span>
@@ -196,9 +199,9 @@
 			<span class="event event0 e1595bc meso deny" onmouseenter="showTipG('o1595bc')" onmouseleave="hideTip()">Saque da Babilônia pelos hititas</span>
 			<span class="event event0 e1363bc meso deny">Fundação do Império Assírio</span>
 			
-			<span class="event event0 eBA1" onmouseenter="showTipG('oBA1')" onmouseleave="hideTip()" onclick="showSidebarG('eBA1')">Bronze Antigo</span>
-			<span class="event event0 eBA2" onmouseenter="showTipG('oBA2')" onmouseleave="hideTip()" onclick="showSidebarG('eBA2')">Bronze Médio</span>
-			<span class="event event0 eBA3" onmouseenter="showTipG('oBA3')" onmouseleave="hideTip()" onclick="showSidebarG('eBA3')">Bronze Recente</span>
+			<span class="event event0 eBA1" onmouseenter="showTipG('oBA1')" onmouseleave="hideTip()" onclick="showSidebarG('eBA1')">Bronze Antigo <i class="fa fa-map-o"></i></span>
+			<span class="event event0 eBA2" onmouseenter="showTipG('oBA2')" onmouseleave="hideTip()" onclick="showSidebarG('eBA2')">Bronze Médio <i class="fa fa-map-o"></i></span>
+			<span class="event event0 eBA3" onmouseenter="showTipG('oBA3')" onmouseleave="hideTip()" onclick="showSidebarG('eBA3')">Bronze Recente <i class="fa fa-map-o"></i></span>
 			
 			<span class="event event0 e42ka" onclick="showSidebarG('e42ka')">Mudança Climática de 4200 ap</span>
 			<span class="event event0 eBAC" onmouseenter="showTipG('oBAC')" onmouseleave="hideTip()" onclick="showSidebarG('eBAC')">Colapso da Idade do Bronze</span>
@@ -239,9 +242,10 @@
 			<div class="overlay2 oGreece oGreeceI0" onmouseenter="showTipGreece('oGreeceI0')" onmouseleave="hideTip()"></div>
 			
 			<!--Events-->
-			<span class="event event0 eIA0" onmouseenter="showTipG('oIA0')" onmouseleave="hideTip()" onclick="showSidebarG('eIA0')">Idade do Ferro</span>
-			<span class="event event0 e1100 meso" onmouseenter="showTipG('o1100bc')" onmouseleave="hideTip()">Criação do Enuma Elish</span>
-			<span class="event event0 eCIx" onmouseenter="showTipG('oAA0')" onmouseleave="hideTip()" onclick="showSidebarG('eAA0')">Início da Antiguidade Clássica</span>
+			<span class="event event0 eIA0" onmouseenter="showTipG('oIA0')" onmouseleave="hideTip()" onclick="showSidebarG('eIA0')">Idade do Ferro <i class="fa fa-map-o"></i></span>
+			<span class="event event0 e1100 meso deny" onmouseenter="showTipG('o1100bc')" onmouseleave="hideTip()">Criação do Enuma Elish</span>
+			<span class="event event0 e1050bc" onclick="showSidebarG('sb1050bc')">Desenvolvimento do alfabeto fenício <i class='fa fa-sitemap'></i></span>
+			<span class="event event0 eCIx" onmouseenter="showTipG('oAA0')" onmouseleave="hideTip()" onclick="showSidebarG('eAA0')">Início da Antiguidade Clássica <i class="fa fa-map-o"></i></span>
 		</section>
 		
 		<section id="ancient">
@@ -367,6 +371,9 @@
 			
 		<!-- Events -->
 			
+			<span class="event event0 e800bc" onclick="showSidebarG('e800bc')">Desenvolvimento do alfabeto aramaico</span>
+			<span class="event event0 eSR deny" onmouseenter="showTipG('oSR')" onmouseleave="hideTip()">A Rota da Seda conecta o Mediterrâneo à China</span>
+			
 			<span class="event event0 e605bc meso deny" onmouseenter="showTipG('o605bc')" onmouseleave="hideTip()">Reino de Nabucodonosor II</span>
 			
 			<span class="event event0 eLevantA0 levant deny" onmouseenter="showTipG('oLevantA0')" onmouseleave="hideTip()">Destruição de Israel</span>
@@ -375,17 +382,17 @@
 			<span class="event event0 eLevantA3 levant deny" onmouseenter="showTipG('oLevantA3')" onmouseleave="hideTip()">Nascimento de Jesus</span>
 			<span class="event event0 eLevantA4 levant deny" onmouseenter="showTipG('oLevantA4')" onmouseleave="hideTip()">Destruição do Templo de Herodes</span>
 			
-			<span class="event event0 eIranAx iran" onmouseenter="showTipIran('oIranA2')" onmouseleave="hideTip('oIranA2')" onclick="showSidebarIran('sbIranA2')">Fundação do Império Aquemênida</span>
+			<span class="event event0 eIranAx iran" onmouseenter="showTipIran('oIranA2')" onmouseleave="hideTip('oIranA2')" onclick="showSidebarIran('sbIranA2')">Fundação do Império Aquemênida <i class="fa fa-map-o"></i></span>
 			
 			<span class="event event0 e700bc greece deny">Homero e Hesíodo</span>
-			<span class="event event0 e484bc greece deny">Heródoto</span>
+			<span class="event event0 e484bc greece deny" onmouseenter="showTipG('oHerodotus')" onmouseleave="hideTip()">Heródoto</span>
 			<span class="event event0 e330bc greece" onmouseenter="showTipGreece('oGreeceA2')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA2')">Fundação do Império Macedônico</span>
-			<span class="event event0 eCA1" onmouseenter="showTipGreece('oGreeceA3')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA3')">Início do Período Helenístico</span>
+			<span class="event event0 eCA1" onmouseenter="showTipGreece('oGreeceA3')" onmouseleave="hideTip()" onclick="showSidebarGreece('sbGreeceA3')">Início do Período Helenístico <i class="fa fa-map-o"></i></span>
 			<!--<span class="event event0 eGreeceAx greece deny">Fundação de Alexandria, Egito</span>-->
 			
 			<span class="event event0 eRomeA0 rome" onmouseenter="showTipRome('oRomeA0')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA0')">Fundação da cidade de Roma</span>
-			<span class="event event0 eRomeA1 rome" onmouseenter="showTipRome('oRomeA1')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA1')">Fundação da República Romana</span>
-			<span class="event event0 eRomeA2 rome" onmouseenter="showTipRome('oRomeA2')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA2')">Fundação do Império Romano</span>
+			<span class="event event0 eRomeA1 rome" onmouseenter="showTipRome('oRomeA1')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA1')">Fundação da República Romana <i class="fa fa-map-o"></i></span>
+			<span class="event event0 eRomeA2 rome" onmouseenter="showTipRome('oRomeA2')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA2')">Fundação do Império Romano <i class="fa fa-map-o"></i></span>
 			<span class="event event0 eRomeA3 rome" onmouseenter="showTipG('oRomeA3')" onmouseleave="hideTip()" onclick="showSidebarRome('sbRomeA3')">Divisão do Império Romano</span>
 			<span class="event event0 eRomeA4 rome deny">Rômulo Augústulo é deposto por Odoacro</span>
 			<span class="event event0 eRomeC0 rome deny" onmouseenter="showTipG('oRomeC0')" onmouseleave="hideTip()">Reino de Constantino, O Grande</span>
@@ -515,11 +522,6 @@
 			<iframe src="IronAge.html" height="100%" width="100%"></iframe>
 		</div>
 		
-		<div id="mAncient2" class="mapaModal">
-			<span onclick="showSidebar('mAncient2')" class="close">&times;</span>
-			<iframe src="Ancient2.html" height="100%" width="100%"></iframe>
-		</div>
-		
 		<div id="mEgyptS0" class="mapaModal">
 			<span onclick="showSidebar('mEgyptS0')" class="close">&times;</span>
 			<img src=img/maps/EgyptS0.png alt="Mapa do Alto e Baixo Egito antes de sua unificação">
@@ -595,8 +597,13 @@
 			<p class="legend">Mapa do Império Macedônico em sua maior extensão</p>
 		</div>
 
-		<div id="mAncient2" class="mapaModal">
-			<span onclick="showSidebar('mAncient2')" class="close">&times;</span>
+		<div id="meAA1" class="mapaModal">
+			<span onclick="showSidebar('meAA1')" class="close">&times;</span>
+			<iframe src="Ancient1.html" height="100%" width="100%"></iframe>
+		</div>
+
+		<div id="meAA2" class="mapaModal">
+			<span onclick="showSidebar('meAA2')" class="close">&times;</span>
 			<iframe src="Ancient2.html" height="100%" width="100%"></iframe>
 		</div>
 		
@@ -609,6 +616,11 @@
 			<span onclick="showSidebar('mRomeA3')" class="close">&times;</span>
 			<img src=img/maps/RomeA3.png alt="Divisão do Império Romano em Ocidente e Oriente, 395 d.C.">
 			<p class="legend">Divisão do Império Romano em Ocidente e Oriente, 395 d.C.</p>
+		</div>
+		
+		<div id="cAlphabet" class="mapaModal">
+			<span onclick="showSidebar('cAlphabet')" class="close">&times;</span>
+			<iframe src="Alphabet.html" height="100%" width="100%"></iframe>
 		</div>
 		
 		<script src="timeline-script.js"></script>
